--- a/notes/aws-solutions-architect/3.iam.md
+++ b/notes/aws-solutions-architect/3.iam.md
@@ -4,7 +4,7 @@ tags: note
 course: aws solutions architect
 layout: subs/layout-note.njk
 ---
-# Identity Access Management (IAM)
+## Identity Access Management (IAM)
 
 This is a global service.
 
