--- a/notes/aws-solutions-architect/14.ssl-tls.md
+++ b/notes/aws-solutions-architect/14.ssl-tls.md
@@ -16,7 +16,7 @@ Nowadays, traffic is encrypted using TLS (Transport Layer Security), which is a 
 
 SSl certs are issued by a Certificate Authority (CA) and have an expiration date. 
 
-![](/assets/ssl.png)
+![](//assets/ssl.png)
 
 ## Load Balancer and SSL
 
@@ -31,7 +31,7 @@ SSl certs are issued by a Certificate Authority (CA) and have an expiration date
 - This helps manage multiple SSLs on one Server
 - Client must indicate server hostname to get the right SSL
 
-![](/assets/sni.png)
+![](//assets/sni.png)
 
 ## Load Balancer Support
 
