--- a/notes/aws-solutions-architect/13.load-balancing-ELB.md
+++ b/notes/aws-solutions-architect/13.load-balancing-ELB.md
@@ -12,7 +12,7 @@ A load balancer sits in front of your instances and distibutes traffic depending
 
 This diagram explains it well:
 
-![](/assets/loadbalancer.png)
+![](//assets/loadbalancer.png)
 
 ## Why?
 
@@ -65,7 +65,7 @@ Load balancing can be based on:
 
 > ALB is good for microservices where you want to balance load between services and each service might hit a different endpoint, subdomain, container etc
 
-![](/assets/alb.png)
+![](//assets/alb.png)
 
 ## Target groups
 
@@ -78,7 +78,7 @@ Path routing, for example, determines which target group (a set of resources) to
 
 For example query param target group routing:
 
-![](/assets/alb-query.png)
+![](//assets/alb-query.png)
 
 # Good to know:
 
@@ -109,7 +109,7 @@ It has:
 
 > GLB allows you to analyse all traffic and drop it if necessary. 
 
-![application load balancer](/assets/glb-2.png)
+![application load balancer](//assets/glb-2.png)
 
 Target groups can be:
 
@@ -131,7 +131,7 @@ It's controlled using a cookie, which is either:
 
 Cross-zone load balancing allows you to distribute load balancer traffic across different AZs. It can be turned on and off per load balancer. 
 
-![](/assets/czlb.png)
+![](//assets/czlb.png)
 
 If it's turned on, all traffic will be spread evenly across AZs. Otherwise it won't.
 
