--- a/notes/go/1.intro.md
+++ b/notes/go/1.intro.md
@@ -6,7 +6,7 @@ layout: subs/layout-note.njk
 ---
 # Go intro
 
-![](/assets/go.png)
+![](//assets/go.png)
 
 These are notes taken from Learning Go via the online tutorial at: https://go.dev/doc/tutorial/getting-started
 
