--- a/notes/aws-solutions-architect/15.RDS.md
+++ b/notes/aws-solutions-architect/15.RDS.md
@@ -1,5 +1,5 @@
 ---
-title: 14.RDS
+title: 15.RDS
 tags: note
 course: aws solutions architect
 layout: subs/layout-note.njk
@@ -119,6 +119,72 @@ Aurora has a:
 
 ![](/assets/aurora-cluster.png)
 
+## Advanced - Aurora replicas and auto scaling
 
+If read endpoints receive much more traffic then the read replicas will autoscale:
 
+![](/assets/aurora-read-scaling.png)
+
+## Avanced - replicas and custom endpoints
+
+By default, replicas share the same endpoint, but you can specify a custom endpoint should some of your replicas be unique, for example the DBs are larger or more powerful:
+
+![](/assets/aurora-custom-endpoint.png)
+
+## Advanced - Aurora serverless
+
+Serverless option from AWS that:
+
+- automatically scales depending on usage
+- no storage planning needed
+- pay per second pricing model
+
+## Advanced - global availability
+
+For global availability you can:
+
+1. Create Aurora cross region availability using read replicas
+2. Use an Aurora global database (recommended):
+
+The global database has:
+
+- 1 primary region
+- up to 5 additional read only regions 
+- 16 read replicas in the regions
+- helps decrease latency globally
+- replication takes less than 1s
+
+> In the exam when "cross region replication < 1s" is mentioned, it's referring to Aurora Global
+
+## Advanced - Aurora Machine Learning
+
+SQL integration with other AWS ML tools: SageMaker and Comprehend. It basically takes data from your Aurora tables and uses them to power ML tools. The data will be routed through Aurora:
+
+![](/assets/aurora-ml.png)
+
+## RDS Backups
+
+There are two ways to backup:
+
+1. Automated Backups: daily full backups, can restore from any point up to 5 min before backup (so any time in the past up until 5min ago). 1-35 days retention
+2. Manual DB Snapshots: manually triggered and retention as long as you want
+
+> To save money, instead of stopping a DB (you will still pay) you can create a snapshot and restore from there in the future
+
+## Aurora backups
+
+It's similar, with automated backups and manual DB snapshots. Automated backups cannot be turned off!
+
+## Restoring operations
+
+Two options:
+
+1. Restoring automatically from backup/snapshot. This will create a new DB.
+2. Restore MYSQL / Aurora from S3. Involves creating a backup on S3 and then restoring from there. For Aurora you have to use Percona XtraBackup for this.
+
+## Aurora DB cloning
+
+Creates new Aurora cluster from an existing one. You can do this to run DB testing, for example. 
+
+When the new cluster is created and new write operations are made to it, new storage is allocated only to the new DB cluster.
 
